# google-search-console-mcp

./: README.md  ROADMAP.md  gsc_mcp_server.py  pyproject.toml
.github/workflows/: publish.yml
docs/: index.html
