[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-search-console-mcp"
version = "0.3.0"
description = "The GSC 'Intel Engine' for the evolving search landscape. Authoritative visibility governance and AI overview citation analysis via Model Context Protocol."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Surendran B", email = "reachsuren@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.4.0",
    "google-auth-httplib2>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/surendranb/google-search-console-mcp"
Repository = "https://github.com/surendranb/google-search-console-mcp.git"
Issues = "https://github.com/surendranb/google-search-console-mcp/issues"

[project.scripts]
gsc-mcp = "gsc_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
include = [
    "gsc_mcp_server.py",
    "gsc_dimensions.json",
    "gsc_metrics.json",
    "gsc_filters.json",
    "README.md",
    "LICENSE"
]
